--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.sonatype.blog</groupId>
   <artifactId>git-demo</artifactId>
   <packaging>jar</packaging>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <name>git-demo</name>
   <url>http://maven.apache.org</url>
   <dependencies>
